# iblog

./: .gitignore  README.md  iblog_data.sql
iblog_admin/: README.md  package-lock.json  package.json
iblog_admin/src/: config.ts
iblog_admin/src/router/: index.ts
iblog_admin/src/views/AdminArticleManage/: AdminArticleManage.vue
iblog_admin/src/views/AdminArticleManage/components/: AdminArticleManageArea.vue
iblog_admin/src/views/AdminDashBoard/: AdminDashBoard.vue
iblog_admin/src/views/AdminDashBoard/components/: AdminDashBoardCards.vue  AdminDashBoardCharts.vue  AdminDashBoardRankList.vue
iblog_admin/src/views/AdminLogin/: AdminLogin.vue
iblog_admin/src/views/AdminLogin/components/: AdminLoginArea.vue
iblog_admin/src/views/AdminManage/: AdminManage.vue
iblog_admin/src/views/AdminManage/components/: AdminHeader.vue  AdminSideBar.vue
iblog_admin/src/views/AdminProfileSetting/: AdminProfileSetting.vue
iblog_admin/src/views/AdminProfileSetting/components/: AdminProfileAvatarSetting.vue  (+1 more)
iblog_admin/src/views/AdminSecuritySetting/: AdminSecuritySetting.vue
iblog_admin/src/views/AdminWebsiteSetting/: AdminWebsiteSetting.vue
iblog_backend/: Cargo.toml
iblog_backend/src/: auth.rs  main.rs
iblog_frontend/: README.md  package-lock.json  package.json
iblog_frontend/src/: App.vue  config.ts  main.ts
iblog_frontend/src/router/: index.ts
iblog_frontend/src/views/ArticleFullPage/: ArticleFullPage.vue
iblog_frontend/src/views/UserHomePage/: UserHomePage.vue
iblog_mcpserver/: Cargo.toml
iblog_mcpserver/src/: main.rs
iblog_skill/: SKILL.md
(+7 files in other folders)
