[package]
name = "iblog_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
actix-cors = "0.7"
actix-multipart = "0.7"
futures-util = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "chrono"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
dotenvy = "0.15"
urlencoding = "2"
